create index.html file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Kanit&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
    </head>
    <body>
+      <link rel="shortcut icon" type="x-icon"  href="tabicon.png">
       <nav>
          <div class="menu-icon">
             <span class="fas fa-bars"></span>
